Fix z-index

--- a/addon/content/tailwind.css
+++ b/addon/content/tailwind.css
@@ -31,7 +31,6 @@
     --radius-md: 0.375rem;
     --radius-lg: 0.5rem;
     --radius-xl: 0.75rem;
-    --radius-2xl: 1rem;
     --default-transition-duration: 150ms;
     --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --color-background: var(--material-background);
@@ -88,11 +87,20 @@
   .top-18 {
     top: calc(var(--spacing) * 18);
   }
+  .top-20 {
+    top: calc(var(--spacing) * 20);
+  }
+  .top-22 {
+    top: calc(var(--spacing) * 22);
+  }
   .top-full {
     top: 100%;
   }
   .right-full {
     right: 100%;
+  }
+  .left-1 {
+    left: calc(var(--spacing) * 1);
   }
   .left-1\/2 {
     left: calc(1/2 * 100%);
@@ -105,6 +113,15 @@
   }
   .z-30 {
     z-index: 30;
+  }
+  .z-35 {
+    z-index: 35;
+  }
+  .z-40 {
+    z-index: 40;
+  }
+  .z-50 {
+    z-index: 50;
   }
   .container {
     width: 100%;
@@ -142,6 +159,9 @@
   }
   .m-0\! {
     margin: calc(var(--spacing) * 0) !important;
+  }
+  .mx-0 {
+    margin-inline: calc(var(--spacing) * 0);
   }
   .mx-0\! {
     margin-inline: calc(var(--spacing) * 0) !important;
@@ -208,6 +228,9 @@
   }
   .mb-12 {
     margin-bottom: calc(var(--spacing) * 12);
+  }
+  .ml-auto {
+    margin-left: auto;
   }
   .ml-auto\! {
     margin-left: auto !important;
@@ -282,6 +305,9 @@
   .min-h-15 {
     min-height: calc(var(--spacing) * 15);
   }
+  .w-1 {
+    width: calc(var(--spacing) * 1);
+  }
   .w-1\/4 {
     width: calc(1/4 * 100%);
   }
@@ -324,17 +350,27 @@
   .flex-1 {
     flex: 1;
   }
+  .flex-shrink {
+    flex-shrink: 1;
+  }
   .shrink {
     flex-shrink: 1;
   }
   .shrink-0 {
     flex-shrink: 0;
   }
+  .flex-grow {
+    flex-grow: 1;
+  }
   .grow {
     flex-grow: 1;
   }
   .grow-0 {
     flex-grow: 0;
+  }
+  .-translate-x-1 {
+    --tw-translate-x: calc(var(--spacing) * -1);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .-translate-x-1\/2 {
     --tw-translate-x: calc(calc(1/2 * 100%) * -1);
@@ -387,6 +423,9 @@
   }
   .justify-start {
     justify-content: flex-start;
+  }
+  .gap-0 {
+    gap: calc(var(--spacing) * 0);
   }
   .gap-0\.5 {
     gap: calc(var(--spacing) * 0.5);
@@ -503,6 +542,10 @@
     border-style: var(--tw-border-style);
     border-width: 2px;
   }
+  .border-3 {
+    border-style: var(--tw-border-style);
+    border-width: 3px;
+  }
   .border-3\! {
     border-style: var(--tw-border-style) !important;
     border-width: 3px !important;
@@ -523,6 +566,10 @@
     border-top-style: var(--tw-border-style) !important;
     border-top-width: 0px !important;
   }
+  .border-t-2 {
+    border-top-style: var(--tw-border-style);
+    border-top-width: 2px;
+  }
   .border-t-2\! {
     border-top-style: var(--tw-border-style) !important;
     border-top-width: 2px !important;
@@ -539,6 +586,9 @@
     --tw-border-style: none !important;
     border-style: none !important;
   }
+  .border-accent-blue {
+    border-color: var(--color-accent-blue);
+  }
   .border-accent-blue\! {
     border-color: var(--color-accent-blue) !important;
   }
@@ -551,6 +601,9 @@
   .border-secondary {
     border-color: var(--color-secondary);
   }
+  .border-tertiary {
+    border-color: var(--color-tertiary);
+  }
   .border-tertiary\/50 {
     border-color: color-mix(in srgb, light-dark(
     rgba(0, 0, 0, 0.2509803922),
@@ -562,6 +615,9 @@
   }
   .border-transparent {
     border-color: transparent;
+  }
+  .bg-accent-blue {
+    background-color: var(--color-accent-blue);
   }
   .bg-accent-blue\! {
     background-color: var(--color-accent-blue) !important;
@@ -614,6 +670,9 @@
   .p-16 {
     padding: calc(var(--spacing) * 16);
   }
+  .px-0 {
+    padding-inline: calc(var(--spacing) * 0);
+  }
   .px-0\! {
     padding-inline: calc(var(--spacing) * 0) !important;
   }
@@ -631,6 +690,9 @@
   }
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
+  }
+  .py-0 {
+    padding-block: calc(var(--spacing) * 0);
   }
   .py-0\.5 {
     padding-block: calc(var(--spacing) * 0.5);
@@ -673,6 +735,9 @@
   }
   .text-center {
     text-align: center;
+  }
+  .text-left {
+    text-align: left;
   }
   .text-left\! {
     text-align: left !important;
@@ -752,6 +817,9 @@
   .text-primary\! {
     color: var(--color-primary) !important;
   }
+  .text-red-500 {
+    color: var(--color-red-500);
+  }
   .text-red-500\! {
     color: var(--color-red-500) !important;
   }
@@ -770,6 +838,9 @@
   .underline {
     text-decoration-line: underline;
   }
+  .accent-accent-green {
+    accent-color: var(--color-accent-green);
+  }
   .accent-accent-green\! {
     accent-color: var(--color-accent-green) !important;
   }
@@ -784,6 +855,10 @@
   }
   .opacity-100 {
     opacity: 100%;
+  }
+  .outline-2 {
+    outline-style: var(--tw-outline-style);
+    outline-width: 2px;
   }
   .outline-2\! {
     outline-style: var(--tw-outline-style) !important;
@@ -815,6 +890,10 @@
   .duration-200 {
     --tw-duration: 200ms;
     transition-duration: 200ms;
+  }
+  .outline-dashed {
+    --tw-outline-style: dashed;
+    outline-style: dashed;
   }
   .outline-dashed\! {
     --tw-outline-style: dashed !important;
